--- a/myapp/react-app/src/component/Qna/css/Qnawrite.css
+++ b/myapp/react-app/src/component/Qna/css/Qnawrite.css
@@ -15,7 +15,7 @@
   color: #fff;
   text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
   cursor: pointer;
-  background-color: #4CAF50;
+  background-color: #4280d4;
   border: none;
   border-radius: 50px;
   box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
@@ -31,7 +31,7 @@
   left: -10px;
   bottom: -10px;
   right: -10px;
-  background-color:#45a049;
+  background-color:#4280d4;
   z-index: -1;
   border-radius: 50px;
   transform: scale(0.98);
